Part 1/1.10/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-writer-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-writer-reader
  template:
    metadata:
      labels:
        app: logoutput-writer-reader
    spec:
      volumes:
        - name: shared-file
          emptyDir: {}
      containers:
        - name: logoutput-reader
          image: jc40/logoutput-reader:3.0.5
          volumeMounts:
            - name: shared-file
              mountPath: /files
        - name: logoutput-writer
          image: jc40/logoutput-writer:1.0.1
          volumeMounts:
            - name: shared-file
              mountPath: /files
