Part 1/1.10/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-writer-reader-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput-writer-reader
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
