Part 1/1.10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-writer-reader-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logoutput-writer-reader-svc
            port:
              number: 2345
